debug AIPlayer et ajout javadoc